# gen/database/models.go
@@ -41,16 +41,18 @@ type Exchanger struct {
 }
 
 type Order struct {
-	ID             int64     `json:"id"`
-	UserID         int64     `json:"user_id"`
-	OperatorID     int64     `json:"operator_id"`
-	ExchangerID    int64     `json:"exchanger_id"`
-	AmountIn       float64   `json:"amount_in"`
-	AmountOut      float64   `json:"amount_out"`
-	ReceiveAddress string    `json:"receive_address"`
-	CreatedAt      time.Time `json:"created_at"`
-	Cancelled      bool      `json:"cancelled"`
-	Finished       bool      `json:"finished"`
+	ID               int64     `json:"id"`
+	UserID           int64     `json:"user_id"`
+	OperatorID       int64     `json:"operator_id"`
+	ExchangerID      int64     `json:"exchanger_id"`
+	AmountIn         float64   `json:"amount_in"`
+	AmountOut        float64   `json:"amount_out"`
+	ReceiveAddress   string    `json:"receive_address"`
+	CreatedAt        time.Time `json:"created_at"`
+	Cancelled        bool      `json:"cancelled"`
+	Finished         bool      `json:"finished"`
+	ConfirmImage     []byte    `json:"confirm_image"`
+	PaymentConfirmed bool      `json:"payment_confirmed"`
 }
 
 type User struct {
